--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,2 +1,8 @@
 @import "./navbar";
-@import "./_base";
+@import "./base";
+@import "./header";
+@import "./content";
+@import "./feedback";
+@import "./footer";
+@import "./about";
+@import "./news";
