feat(rwd - main page): main page made responsive using media queries

--- a/assets/scss/_algorithms.scss
+++ b/assets/scss/_algorithms.scss
@@ -7,6 +7,9 @@
 }
 
 .algorithms {
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
 
     &__sort {
         margin: 30px;
