--- a/assets/scss/_footer.scss
+++ b/assets/scss/_footer.scss
@@ -1,9 +1,11 @@
+@import './base';
+
 .footer {
     display: flex;
     flex-flow: column;
-    color: black;
     align-items: center;
     margin: 30px 0;
+
 
     &__logo {
         width: 60px;
@@ -42,3 +44,62 @@
         color: #000000;
     }
 }
+
+@media (min-width: 800px) {
+    .footer {
+        display: flex;
+        flex-flow: row;
+        align-items: center;
+        margin: auto;
+        justify-content: space-between;
+        width: 100%;
+        max-width: 1200px;
+        padding: 15px;
+
+        &__logo {
+            width: 60px;
+        }
+    
+        &__links {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin: 30px 0;
+        }
+    
+        &__link {
+            font-family: Raleway;
+            font-style: normal;
+            font-weight: bold;
+            font-size: 18px;
+            line-height: 16px;
+            display: flex;
+            margin: 0 10px;
+    
+            a{
+                color: black;
+                text-decoration: none;
+                transition: 0.2s;
+
+                &:hover{
+                    color:$base-color;
+                }
+            }
+        }
+    
+        &__copyright {
+            font-family: Raleway;
+            font-style: normal;
+            font-weight: bold;
+            font-size: 18px;
+            line-height: 50px;
+            text-align: center;
+            letter-spacing: normal;
+            color: #000000;
+        }
+    }
+
+}
+
+
+
