--- a/assets/scss/_navbar.scss
+++ b/assets/scss/_navbar.scss
@@ -1,3 +1,5 @@
+@import "./base";
+
 .nav{
     display: flex;
     justify-content: space-between;
@@ -8,7 +10,7 @@
     
 
     &__logo{
-        
+        width: 120px;
     }
 
     &__hamburger{
@@ -21,4 +23,68 @@
 
         }
     }
+
+    &__cta{
+        display: none;
+    }
+}
+
+@media (min-width: 800px) {
+    .nav{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        height: 100px;
+        width: 100vw;
+        max-width: 1200px;
+        margin: 0 auto;
+        padding: 15px 50px;
+        font-family: "Raleway", sans-serif;
+        
+    
+        &__logo{
+            width: 180px;
+        }
+    
+        &__hamburger{
+            display: none;
+            cursor: pointer;
+        }
+    
+        &__links{
+            list-style: none;
+            display: flex;
+            flex-flow: row nowrap;
+            justify-content: space-around;
+            width: 350px;
+            font-size: 18px;
+            font-weight: bold;
+
+            &__link{
+                
+            }
+        }
+
+        &__cta{
+            height: 40px;
+            width: 180px;
+            border-radius: 90px;
+            background-color: $base-color;
+            border: none;
+            color: white;
+            display: block;
+            
+            font-family: "Raleway", sans-serif;
+            font-size: 18px;
+            font-weight: 600;
+            cursor: pointer;
+
+            transition: 0.2s;
+
+            &:hover{
+                opacity: 0.7;
+            }
+        }
+    }
+
 }
