--- a/assets/scss/_navbar.scss
+++ b/assets/scss/_navbar.scss
@@ -1,90 +1,103 @@
 @import "./base";
 
-.nav{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 100px;
-    width: 100vw;
-    padding: 0px 30px;
-    
-
-    &__logo{
-        width: 120px;
-    }
-
-    &__hamburger{
-        cursor: pointer;
-    }
-
-    &__links{
-        display: none;
-        &__link{
-
-        }
-    }
-
-    &__cta{
-        display: none;
-    }
+.shadow {
+    -webkit-box-shadow: 0 7px 6px -2px rgba(0,0,0,0.51);
+    -moz-box-shadow: 0 7px 6px -2px rgba(0,0,0,0.51);
+    box-shadow: 0 7px 6px -2px rgba(0,0,0,0.51);
 }
 
-@media (min-width: 800px) {
-    .nav{
+.nav {
+    position: fixed;
+    display: flex;
+    background-color: white;
+    width: 100vw;
+    z-index: 999;
+
+    transition: 0.2s;
+
+    &__wrapper {
         display: flex;
         justify-content: space-between;
         align-items: center;
+        width: 100%;
         height: 100px;
-        width: 100vw;
         max-width: 1200px;
         margin: 0 auto;
-        padding: 15px 50px;
+        padding: 0 30px;
         font-family: "Raleway", sans-serif;
-        
-    
-        &__logo{
-            width: 180px;
+
+        &__logo {
+            width: 120px;
         }
-    
-        &__hamburger{
+
+        &__hamburger {
+            cursor: pointer;
+        }
+
+        &__links {
             display: none;
-            cursor: pointer;
-        }
-    
-        &__links{
-            list-style: none;
-            display: flex;
-            flex-flow: row nowrap;
-            justify-content: space-around;
-            width: 350px;
-            font-size: 18px;
-            font-weight: bold;
-
-            &__link{
-                
-            }
+            &__link {}
         }
 
-        &__cta{
-            height: 40px;
-            width: 180px;
-            border-radius: 90px;
-            background-color: $base-color;
-            border: none;
-            color: white;
-            display: block;
-            
-            font-family: "Raleway", sans-serif;
-            font-size: 18px;
-            font-weight: 600;
-            cursor: pointer;
-
-            transition: 0.2s;
-
-            &:hover{
-                opacity: 0.7;
-            }
+        &__cta {
+            display: none;
         }
     }
+}
+@media (min-width: 800px) {
+    .nav {
+        &__wrapper {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            height: 100px;
+            width: 100vw;
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 15px 50px;
+            font-family: "Raleway", sans-serif;
 
+            &__logo {
+                width: 180px;
+            }
+
+            &__hamburger {
+                display: none;
+                cursor: pointer;
+            }
+
+            &__links {
+                list-style: none;
+                display: flex;
+                flex-flow: row nowrap;
+                justify-content: space-around;
+                width: 350px;
+                font-size: 18px;
+                font-weight: bold;
+
+                &__link {}
+            }
+
+            &__cta {
+                height: 40px;
+                width: 180px;
+                border-radius: 90px;
+                background-color: $base-color;
+                border: none;
+                color: white;
+                display: block;
+
+                font-family: "Raleway", sans-serif;
+                font-size: 18px;
+                font-weight: 600;
+                cursor: pointer;
+
+                transition: 0.2s;
+                &:hover {
+                    opacity: 0.7;
+                }
+            }
+        }
+
+    }
 }
