--- a/assets/scss/_about.scss
+++ b/assets/scss/_about.scss
@@ -1,5 +1,5 @@
 .about{
-    margin: 30px;
+    margin: 140px 30px 60px 30px;
     display: flex;
     flex-flow: row wrap;
     color: black;
@@ -24,10 +24,50 @@
             line-height: 161.4%;
             text-align: justify;
             margin: 30px 0;
+            max-width: 600px;
         }
     }
 
     &__photo{
         max-width: 400px;
+    }
+}
+
+@media (min-width: 800px) {
+
+    .about{
+        margin-top: 200px;
+        display: flex;
+        flex-flow: row wrap;
+        color: black;
+        font-family: Raleway;
+        justify-content: center;
+
+        &__wrapper{
+            display: flex;
+            flex-flow: column;
+            max-width: 700px;
+            padding: 20px;
+            
+            &__title{
+                font-weight: bold;
+                font-size: 30px;
+                line-height: 29px;
+            }
+    
+            &__desc{
+                font-weight: 500;
+                font-size: 20px;
+                line-height: 161.4%;
+                text-align: justify;
+                margin: 30px 0;
+                max-width: 600px;
+            }
+        }
+    
+        &__photo{
+            max-width: 400px;
+            margin: 0 40px;
+        }
     }
 }
