--- a/assets/scss/_content.scss
+++ b/assets/scss/_content.scss
@@ -53,6 +53,7 @@
         height: 200px;
         max-width: 500px;
         border-radius: 15px;
+        margin-top: 50px;
     }
 
 }
@@ -65,12 +66,12 @@
         color: black;
         margin: 50px auto;
         width: 100%;
-        max-width: 1200px;
+        max-width: 1300px;
 
         .advantages {
-            margin: 50px 0;
             display: flex;
             flex-flow: column nowrap;
+            margin: 50px 50px;
 
             &__post {
                 display: flex;
