--- a/assets/scss/_footer.scss
+++ b/assets/scss/_footer.scss
@@ -54,7 +54,7 @@
         justify-content: space-between;
         width: 100%;
         max-width: 1200px;
-        padding: 15px;
+        padding: 15px 50px;
 
         &__logo {
             width: 60px;
