--- a/style.css
+++ b/style.css
@@ -264,6 +264,7 @@ html, body {
   height: 200px;
   max-width: 500px;
   border-radius: 15px;
+  margin-top: 50px;
 }
 
 @media (min-width: 800px) {
@@ -275,12 +276,12 @@ html, body {
     color: black;
     margin: 50px auto;
     width: 100%;
-    max-width: 1200px;
+    max-width: 1300px;
   }
   .content .advantages {
-    margin: 50px 0;
     display: flex;
     flex-flow: column nowrap;
+    margin: 50px 50px;
   }
   .content .advantages__post {
     display: flex;
@@ -449,7 +450,7 @@ html, body {
     justify-content: space-between;
     width: 100%;
     max-width: 1200px;
-    padding: 15px;
+    padding: 15px 50px;
   }
   .footer__logo {
     width: 60px;
@@ -489,7 +490,7 @@ html, body {
   }
 }
 .about {
-  margin: 30px;
+  margin: 140px 30px 60px 30px;
   display: flex;
   flex-flow: row wrap;
   color: black;
@@ -512,11 +513,45 @@ html, body {
   line-height: 161.4%;
   text-align: justify;
   margin: 30px 0;
+  max-width: 600px;
 }
 .about__photo {
   max-width: 400px;
 }
 
+@media (min-width: 800px) {
+  .about {
+    margin-top: 200px;
+    display: flex;
+    flex-flow: row wrap;
+    color: black;
+    font-family: Raleway;
+    justify-content: center;
+  }
+  .about__wrapper {
+    display: flex;
+    flex-flow: column;
+    max-width: 700px;
+    padding: 20px;
+  }
+  .about__wrapper__title {
+    font-weight: bold;
+    font-size: 30px;
+    line-height: 29px;
+  }
+  .about__wrapper__desc {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 161.4%;
+    text-align: justify;
+    margin: 30px 0;
+    max-width: 600px;
+  }
+  .about__photo {
+    max-width: 400px;
+    margin: 0 40px;
+  }
+}
 .news {
   display: flex;
   flex-flow: column;
