--- a/assets/scss/_news.scss
+++ b/assets/scss/_news.scss
@@ -1,7 +1,7 @@
 .news{
     display: flex;
     flex-flow: column;
-    margin: 30px;
+    margin: 150px 30px 30px 30px;
     align-items: center;
 
     &__post{
