--- a/src/assets/scss/_header.scss
+++ b/src/assets/scss/_header.scss
@@ -1,9 +1,19 @@
 @import "./base";
 
 
-/* MAKE A BUTTON MIXIN */
 @mixin button{
+    font-family: "Raleway", sans-serif;
+    font-weight: 500;
+    border: none;
+    height: 40px;
+    border-radius: 90px;
+}
 
+@mixin button-desktop{
+    height: 50px;
+    font-size: 18px;
+    width: 100%;
+    max-width: 280px;
 }
 
 .header {
@@ -33,24 +43,17 @@
         width: 100%;
 
         &__explore {
+            @include button;
             background-color: $base-color;
             color: white;
-            font-family: "Raleway", sans-serif;
-            font-weight: 500;
-            border: none;
-            height: 40px;
-            border-radius: 90px;
+            
         }
 
         &__additional {
+            @include button;
             margin-top: 10px;
             background-color: white;
             color: black;
-            font-family: "Raleway", sans-serif;
-            font-weight: bold;
-            border: none;
-            height: 40px;
-            border-radius: 90px;
 
             -webkit-box-shadow: 0 0 7px 3px rgba(145,145,145,0.37);
             -moz-box-shadow: 0 0 7px 3px rgba(145,145,145,0.37);
@@ -62,15 +65,10 @@
 @media (min-width: 600px) {
 
     .header {
-        margin-top: 200px;
-        display: flex;
-        flex-flow: column;
         align-items: center;
     
         &__title {
-            font-family: "Raleway", sans-serif;
             font-size: 60px;
-            font-weight: bold;
             width: 550px;
             text-align: center;
         }
@@ -81,30 +79,21 @@
     
         &__buttons {
             margin-top: 40px; 
-            display: flex;
             flex-flow: row;
             justify-content: space-between;
             width: 600px;
     
             &__explore {
-                height: 50px;
-                font-size: 18px;
-                font-weight: 600;
-                border-radius: 90px;
-                width: 100%;
-                max-width: 280px;
+                @include button-desktop;
+                &:hover {
+                    opacity: 0.7;
+                    cursor: pointer;
+                }
             }
     
             &__additional {
-                height: 50px;
-                font-size: 18px;
-                width: 100%;
-                max-width: 280px;
+                @include button-desktop;
                 margin-top: 0;
-
-                -webkit-box-shadow: 0 0 7px 3px rgba(145,145,145,0.37);
-                -moz-box-shadow: 0 0 7px 3px rgba(145,145,145,0.37);
-                box-shadow: 0 0 7px 3px rgba(145,145,145,0.37);
             }
         }
     
