--- a/src/assets/scss/_navbar.scss
+++ b/src/assets/scss/_navbar.scss
@@ -35,6 +35,8 @@
         }
 
         &__links {
+            //position: absolute;
+            //right: 0;
             display: none;
             &__link {
                 a {
@@ -73,7 +75,6 @@
 
             &__hamburger {
                 display: none;
-                cursor: pointer;
             }
 
             &__links {
@@ -103,6 +104,7 @@
                 cursor: pointer;
 
                 transition: 0.2s;
+                
                 &:hover {
                     opacity: 0.7;
                 }
