--- a/src/style.scss
+++ b/src/style.scss
@@ -1,9 +1,9 @@
-@import "./assets/scss/navbar";
-@import "./assets/scss/base";
-@import "./assets/scss/header";
-@import "./assets/scss/content";
-@import "./assets/scss/feedback";
-@import "./assets/scss/footer";
-@import "./assets/scss/about";
-@import "./assets/scss/news";
-@import "./assets/scss/algorithms";
+@import "./static/assets/scss/navbar";
+@import "./static/assets/scss/base";
+@import "./static/assets/scss/header";
+@import "./static/assets/scss/content";
+@import "./static/assets/scss/feedback";
+@import "./static/assets/scss/footer";
+@import "./static/assets/scss/about";
+@import "./static/assets/scss/news";
+@import "./static/assets/scss/algorithms";
